fix(video): set overflow-x hidden (#53)

--- a/styles/includes/_work.scss
+++ b/styles/includes/_work.scss
@@ -85,6 +85,7 @@
 			@include responsive-spacing(margin-left, 2.4rem, 6.4rem, 9.6rem);
 
 			position: relative;
+			overflow-x: hidden;
 		}
 
 		&-preview-loop {
